--- a/mediathread/templates/navbar.html
+++ b/mediathread/templates/navbar.html
@@ -32,8 +32,8 @@
                 <li class="nav-item">
                     <a class="nav-link"
                        href="{% url 'course-settings-general' request.course.pk %}"
-                       title="Configure Course">
-                        Configure Course
+                       title="Manage Course">
+                        Manage Course
                     </a>
                 </li>
             {% endif %}
