--- a/mediathread/templates/navbar.html
+++ b/mediathread/templates/navbar.html
@@ -21,6 +21,13 @@
             <a class="dropdown-item" href="{% url 'contact-us' %}">Contact Us</a>
         </div>
         </li>
+        <li class="nav-item dropdown">
+        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Use Mediathread </a>
+        <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+            <a class="dropdown-item" href="value.html">Pedagogical Value</a>
+            <a class="dropdown-item" href="examples.html">Examples</a>
+        </div>
+        </li>
     {% if not request.user.is_authenticated %}
         <li class="nav-item dropdown">
         <a class="nav-link dropdown-toggle" href="#"
@@ -34,13 +41,6 @@
             <a class="dropdown-item" href="/history">Mediathread History</a>
         </div>
         </li>
-        <li class="nav-item dropdown">
-	      <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Use Mediathread </a>
-	      <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-		        <a class="dropdown-item" href="value.html">Pedagogical Value</a>
-		        <a class="dropdown-item" href="examples.html">Examples</a>
-	      </div>
-	      </li>
         <li class="nav-item"> <a class="nav-link" href="getinvolved.html"> Get Involved </a> </li>
     {% endif %}
     {% if role_in_course == 'instructor' and request.course %}
@@ -68,7 +68,11 @@
                 {% if role_in_course == "non-member" %}
                     <span class="badge badge-warning">Course Non-member</span>
                 {% endif %}
-                Hi, {{ user.first_name }}! ({{ user.username }})
+                {% if user.first_name %}
+                  Hi, {{ user.first_name }}! ({{ user.username }})
+                {% else %}
+                  Hi, {{ user.username }}!
+                {% endif %}
             </a>
             <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdownMenuLink">
                 <a class="dropdown-item" href="{% url 'course_list' %}" title="My Courses">
