--- a/mediathread/templates/navbar.html
+++ b/mediathread/templates/navbar.html
@@ -110,7 +110,7 @@
                     Sign Out
                 </a>
             {% else %}
-                <a href="signup.html" class="btn btn-outline-secondary" style="margin-right:.25em;">Sign Up</a>
+                <a href="/accounts/register/" class="btn btn-outline-secondary" style="margin-right:.25em;">Sign Up</a>
                 <a href="/accounts/login/" class="btn btn-outline-light">Sign In</a>
             {% endif %}
         </li>
