--- a/mediathread/templates/projects/project_list.html
+++ b/mediathread/templates/projects/project_list.html
@@ -1,6 +1,10 @@
 {% extends "base_new.html" %}
 {% load static %}
 
+{% block title %}
+Projects
+{% endblock %}
+
 {% block css %}
     <link rel="stylesheet" href="{% static 'js/lib/tablesorter/theme.default.min.css' %}">
     <link rel="stylesheet" href="{% static 'js/lib/tablesorter/theme.default.custom.css' %}">
@@ -17,25 +21,48 @@
             </a>
             <a class="flex-sm-fill text-sm-center nav-link" role="tab"
                 href="{% url 'assignment-list' course.pk %}"
-                title="Assignments" href="assignments/">Assignments</a>
+                title="Assignments" href="assignments/">
+                Assignments
+                {% if role_in_course == 'student' and unresponded > 0 %}
+                    <span class="badge badge-primary ml-2">{{unresponded}}</span>
+                {% endif %}
+            </a>
             <a class="flex-sm-fill text-sm-center nav-link active" role="tab"
                 href="{% url 'project-list' course.pk %}"
                 title="Projects" href="projects/">Projects</a>
         </nav>
         <div class="tab-content">
             <div role="tabpanel">
-                <div class="row">
-                    <div class="col-md-12">
+                <div class="d-flex justify-content-between align-items-center flex-wrap">
+                    <div class="col-md-6">
                         <h1 class="page-title">Projects</h1>
+                    </div>
+                    <div class="col-md-6 text-right">
+                        <div class="form-group col-md-12">
+                            <div class="btn-group" role="group">
+                                <form action="{% url 'project-create' course.id %}" method="post">
+                                    <input type="hidden" name="project_type" value="composition" />
+                                    <button id="add-composition-button" type="submit" class="btn btn-outline-secondary btn-sm mr-2">
+                                        Add Composition
+                                    </button> 
+                                </form>
+                                <form action="{% url 'project-create' course.id %}" method="post">
+                                    <input type="hidden" name="project_type" value="sequence" />
+                                    <button id="add-sequence-button" type="submit" class="btn btn-outline-secondary btn-sm">
+                                        Add Sequence
+                                    </button>
+                                </form>
+                            </div>
+                        </div>
                     </div>
                 </div>
                 <div id="search-well">
                     <div class="form-row">
                         <div class="form-group col-md-4">
-                            <label for="owner-filter">Owner</label>
-                            <select id="select-owner" name="owner" class="form-control form-control-sm">
+                            <label for="select-owner">Owner</label>
+                            <select id="select-owner" name="owner" class="form-control form-control-sm mb-3">
                                 <option {% if not owner or owner == user %}selected{% endif %} value="{{user.username}}">Me</option>
-                                {% for o in owners %}
+                                {% for o in course.members %}
                                     {% if o != user %}
                                         <option {% if o == owner %}selected{% endif %} value="{{o.username}}">
                                             {% if o.last_name %}
@@ -49,24 +76,17 @@
                                 {% endfor %}
                             </select>
                         </div>
-                        <div class="form-group col-md-4 offset-md-4">
-                            <div class="btn-group float-right mt-4" role="group">
-                                <form action="{% url 'project-create' course.id %}" method="post">
-                                    <input type="hidden" name="project_type" value="composition" />
-                                    <button id="add-composition-button" type="submit" class="btn btn-outline-secondary mr-2">
-                                        Add Composition
-                                    </button> 
-                                </form>
-                                <form action="{% url 'project-create' course.id %}" method="post">
-                                    <input type="hidden" name="project_type" value="sequence" />
-                                    <button id="add-sequence-button" type="submit" class="btn btn-outline-secondary">
-                                        Add Sequence
-                                    </button>
-                                </form>
-                            </div>
+                    </div>
+                </div>
+                {% if paginator.num_pages > 1 %}
+                <div class="row">
+                    <div class="col-md-6 offset-md-6">
+                        <div class="text-right">
+                            {% include 'projects/pagination.html' %}
                         </div>
                     </div>
                 </div>
+                {% endif %}
                 <form id="search-form" action="." method="get">
                     <input type="hidden" name="owner" value="{{owner}}">
                     <input type="hidden" name="sortby" value="{{sortby}}">
@@ -80,17 +100,18 @@
                                         <thead class="thead-darkgray">
                                             <th data-sort-by="title"
                                                 class="sortable {% if sortby == 'title' %}{{direction}}{% endif %}">
-                                                Project Title
+                                                Title
                                             </th>
-                                            <th>
+                                            <th data-sort-by="visibility">
+                                                Status
+                                            </th>
+                                            <th data-sort-by="full_name"
+                                                class="sortable {% if sortby == 'full_name' %}{{direction}}{% endif %}">
                                                 Authors
                                             </th>
                                             <th data-sort-by="project_type"
                                                 class="sortable {% if sortby == 'project_type' %}{{direction}}{% endif %}">
                                                 Type
-                                            </th>
-                                            <th data-sort-by="visibility">
-                                                Visibility
                                             </th>
                                             <th data-sort-by="modified"
                                                 class="sortable {% if sortby == 'modified' %}{{direction}}{% endif %}">
@@ -105,24 +126,26 @@
                                                         {{object.title}}
                                                     </a>
                                                 </td>
+                                                <td>{{object.visibility_short}}</td>
                                                 <td>{{object.attribution}}</td>
                                                 <td>{{object.description}}</td>
-                                                <td>{{object.visibility}}</td>
-                                                <td>{{object.modified}}</td>
+                                                <td>{{object.modified|date:"n/j/y g:iA"}}</td>
                                             </tr>
-                                        {% empty %}
-                                            No projects found
                                         {% endfor %}
                                         </tbody>
                                     </table>
                                 </div>
                             {% else %}
+                                <div class="text-center w-100">
+                                    {% if owner == request.user %}
+                                        <h4 class="ml-1">You have no projects yet.</h4>
+                                    {% else %}{% if owner.last_name %}
+                                        <h4 class="ml-1">{{owner.first_name}} {{owner.last_name}} has not shared any projects.</h4>
+                                    {% else %}
+                                        <h4 class="ml-1">{{owner.username}} has not shared any projects.</h4>
+                                    {% endif %}{% endif %}
+                                </div>
                             {% endif %}
-                        </div>
-                    </div>
-                    <div class="row mb-2">
-                        <div class="col-md-6 offset-md-6">
-                            {% include 'projects/pagination.html' %}
                         </div>
                     </div>
                 </form>
