--- a/mediathread/templates/main/splash.html
+++ b/mediathread/templates/main/splash.html
@@ -28,7 +28,7 @@ Splash Page
 					Nulla vitae elit libero, a pharetra augue mollis interdum.
 				</p>
 				<p>
-					<a class="btn btn-lg btn-light" href="#" role="button">Learn More</a>
+					<a class="btn btn-lg btn-light" href="/about/" role="button">Learn More</a>
 				</p>
 			</div>
 		</div>
@@ -42,7 +42,7 @@ Splash Page
 					Lorem ipsum dolor sit amet, consectetur adipiscing elit.
 				</p>
 				<p>
-					<a class="btn btn-lg btn-light" href="#" role="button">Learn More</a>
+					<a class="btn btn-lg btn-light" href="/about/" role="button">Learn More</a>
 				</p>
 			</div>
 		</div>
@@ -56,7 +56,7 @@ Splash Page
 					Praesent commodo cursus magna, vel scelerisque nisl consectetur.
 				</p>
 				<p>
-					<a class="btn btn-lg btn-light" href="#" role="button">Learn More</a>
+					<a class="btn btn-lg btn-light" href="/about/" role="button">Learn More</a>
 				</p>
 			</div>
 		</div>
