Add cachebuster for new mediathread homepage JS

--- a/mediathread/templates/courseaffils/course_detail.html
+++ b/mediathread/templates/courseaffils/course_detail.html
@@ -15,7 +15,7 @@
 {% endblock %}
 
 {% block js %}
-    <script src="{% static 'js/bundle.js' %}"></script>
+    <script src="{% static 'js/bundle.js' %}?cachebust=v1"></script>
 {% endblock %}
 
 {% block content %}
