--- a/mediathread/templates/registration/registration_form.html
+++ b/mediathread/templates/registration/registration_form.html
@@ -1,4 +1,4 @@
-{% extends "base.html" %}
+{% extends "base_new.html" %}
 {% load i18n admin_static %}
 {% block title %}&mdash; Sign up for an account{% endblock %}
 
