Implement selections accordion
* implement "group by" on View Selections tab

Still todo: implement group by tag.

--- a/media/css/mediathread_new.css
+++ b/media/css/mediathread_new.css
@@ -4356,3 +4356,7 @@ ul.section-tabs>li>a.active {
 .table th.sortable.desc {
     background-image: url(../img/sortable/desc.gif);
 }
+
+#selectionsAccordion .card-header {
+    padding: 0;
+}
