--- a/mediathread/templates/projects/assignment_list.html
+++ b/mediathread/templates/projects/assignment_list.html
@@ -112,7 +112,7 @@ Assignments
                                         </th>
                                         <th data-sort-by="modified"
                                             class="sortable {% if sortby == 'modified' %}{{direction}}{% endif %}">
-                                            Modified
+                                            Last Updated
                                         </th>
                                     </thead>
                                     <tbody>
@@ -122,18 +122,12 @@ Assignments
                                         <tr>
                                             <td>
                                                 {% if object.due_date %}
-                                                    {{object.due_date|date:"n/j/y g:iA"}}<br />
+                                                    {{object.due_date|date:"n/j/y"}}<br />
                                                 {% endif %}
                                             </td>
                                             <td>
                                                 <div>
-                                                    {% if role_in_course == "student" %}
-                                                        {{object.title}}
-                                                    {% else %}
-                                                        <a href="{% url 'project-workspace' course.id object.id %}" title="{{object.title}}">
-                                                            {{object.title}}
-                                                        </a>
-                                                    {% endif %}
+                                                    {{object.title}}
                                                 </div>
                                             </td>
                                             <td>
@@ -178,7 +172,7 @@ Assignments
                                                 {% else %}
                                                     <a class="btn btn-sm btn-primary btn-block"
                                                         href="{% url 'project-workspace' course.id object.id %}" title="{{object.title}}">
-                                                        Edit
+                                                        View
                                                     </a>
                                                 {% endif %}
                                             </td>
