--- a/mediathread/templates/projects/assignment_list.html
+++ b/mediathread/templates/projects/assignment_list.html
@@ -17,11 +17,11 @@ Assignments
         <nav id="three-section-tabs" class="nav nav-tabs flex-column flex-sm-row"
             role="tablist">
             <a class="flex-sm-fill text-sm-center nav-link " role="tab"
-                title="Collection" href="{% url 'course_detail' course.pk %}">
+                title="Collection" href="{% url 'course_detail' request.course.pk %}">
                 Collection
             </a>
             <a class="flex-sm-fill text-sm-center nav-link active" role="tab"
-                href="{% url 'assignment-list' course.pk %}"
+                href="{% url 'assignment-list' request.course.pk %}"
                 title="Assignments" href="assignments/">
                     Assignments
                     {% if role_in_course == 'student' and unresponded > 0 %}
@@ -29,7 +29,7 @@ Assignments
                     {% endif %}
             </a>
             <a class="flex-sm-fill text-sm-center nav-link" role="tab"
-                href="{% url 'project-list' course.pk %}"
+                href="{% url 'project-list' request.course.pk %}"
                 title="Projects" href="projects/">Projects</a>
         </nav>
         <div class="tab-content">
@@ -42,18 +42,18 @@ Assignments
                         {% if role_in_course != "student" %}
                             <div class="form-group col-md-12">
                                 <div class="btn-group" role="group">
-                                    <form action="{% url 'project-create' course.id %}" method="post">
+                                    <form action="{% url 'project-create' request.course.id %}" method="post">
                                         <input type="hidden" name="project_type" value="assignment" />
                                         <button id="add-sequence-button" type="submit" class="btn btn-sm btn-outline-secondary mr-2">
                                             Add Composition Assignment
                                         </button>
                                     </form>
                                     <a class="btn btn-sm btn-outline-secondary mr-2"
-                                        href="{% url 'selection-assignment-create' course.id %}">
+                                        href="{% url 'selection-assignment-create' request.course.id %}">
                                         Add Selection Assignment
                                     </a>
                                     <a class="btn btn-sm btn-outline-secondary"
-                                        href="{% url 'sequence-assignment-create' course.id %}">
+                                        href="{% url 'sequence-assignment-create' request.course.id %}">
                                         Add Sequence Assignment
                                     </a>
                                 </div>
@@ -147,7 +147,7 @@ Assignments
                                             <td>
                                                 {% if role_in_course == "student" %}
                                                     {% if not response %}
-                                                        <form action="{% url 'project-create' course.id %}" method="post">
+                                                        <form action="{% url 'project-create' request.course.id %}" method="post">
                                                             <input type="hidden" name="parent" value="{{object.id}}">
                                                             <input type="hidden" name="project_type" value="composition">
                                                             <input type="hidden" name="title" value="My Response">
@@ -155,23 +155,23 @@ Assignments
                                                         </form>
                                                     {% else %}{% if response.feedback_discussion %}
                                                         <a class="btn btn-sm btn-primary btn-block"
-                                                            href="{% url 'project-workspace' course.id response.id %}" title="{{response.title}}">
+                                                            href="{% url 'project-workspace' request.course.id response.id %}" title="{{response.title}}">
                                                             View Feedback
                                                         </a>
                                                     {% else %}{% if response.is_submitted %}
                                                         <a class="btn btn-sm btn-secondary btn-block"
-                                                            href="{% url 'project-workspace' course.id response.id %}" title="{{response.title}}">
+                                                            href="{% url 'project-workspace' request.course.id response.id %}" title="{{response.title}}">
                                                             View Response
                                                         </a>
                                                     {% else %}
                                                         <a class="btn btn-sm btn-primary btn-block"
-                                                            href="{% url 'project-workspace' course.id response.id %}" title="{{response.title}}">
+                                                            href="{% url 'project-workspace' request.course.id response.id %}" title="{{response.title}}">
                                                             Edit Response
                                                         </a>
                                                     {% endif %}{% endif %}{% endif %}
                                                 {% else %}
                                                     <a class="btn btn-sm btn-primary btn-block"
-                                                        href="{% url 'project-workspace' course.id object.id %}" title="{{object.title}}">
+                                                        href="{% url 'project-workspace' request.course.id object.id %}" title="{{object.title}}">
                                                         View
                                                     </a>
                                                 {% endif %}
@@ -179,7 +179,7 @@ Assignments
                                             {% if role_in_course != "student" %}
                                                 <td class="text-center">
                                                     {% if role_in_course != "student" %}
-                                                        {{responses|length}} / {{course.students|length}}
+                                                        {{responses|length}} / {{request.course.students|length}}
                                                     {% endif %}
                                                 </td>
                                                 <td>
