Video player style adjustments
* Use black background color for video player
* Use 16 by 9 aspect ratio instead of 4 by 3. This is the default aspect
  ratio on youtube.

--- a/media/css/mediathread_new.css
+++ b/media/css/mediathread_new.css
@@ -4360,3 +4360,7 @@ ul.section-tabs>li>a.active {
 #selectionsAccordion .card-header {
     padding: 0;
 }
+
+.react-player>video {
+    background-color: black;
+}
