test change and basic upload structure

--- a/mediathread/templates/main/collection_add.html
+++ b/mediathread/templates/main/collection_add.html
@@ -39,6 +39,17 @@ Add to Collection
                         <p class="lead">
                             Contribute video and audio to this course directly from your desktop into Mediathread with Wardenclyffe.
                         </p>
+                        <h3>Video</h3>
+
+
+
+                        <h3>Audio</h3>
+
+
+
+
+                        <h3>Images</h3>
+                        <p>Images can be imported into this course using the Chrome extension. See “Import Media.”</p>
                     </div>
 
                     <div class="col-md-6 order-md-1">
@@ -54,7 +65,7 @@ Add to Collection
                             {% elif request.user_agent.browser.family == 'Firefox' %}
                             {% include "assetmgr/install_firefox_extension.html" %}
                             {% endif %}
-                        </div> <!-- end import into collection box -->
+                        </div>
                     </div>
                 </div>
             </div>
