--- a/mediathread/templates/navbar.html
+++ b/mediathread/templates/navbar.html
@@ -102,7 +102,7 @@
 
         <li class="nav-item">
             {% if request.user.is_authenticated %}
-                <a class="btn btn-outline-light btn-block" role="button"
+                <a class="btn btn-outline-light btn-block sign-out" role="button"
                    href="/accounts/logout/?next=/" title="Sign Out">
                     Sign Out
                 </a>
