selections accordion: sort Tags and Authors properly - MEDT-3550

--- a/mediathread/templates/base_new.html
+++ b/mediathread/templates/base_new.html
@@ -207,6 +207,8 @@ A new base.html without the course context overwritten in the template.
                 {% else %}
                 this.addressable_courses = false;
                 {% endflag %}
+
+                this.tag_cache = {};
             })();
             </script>
 
