Add selection creation guide - MEDT-3587

--- a/media/css/mediathread_new.css
+++ b/media/css/mediathread_new.css
@@ -4364,3 +4364,15 @@ ul.section-tabs>li>a.active {
 .react-player>video {
     background-color: black;
 }
+
+.toolbar-annotations .input-group:focus-within,
+.toolbar-annotations button.polygon-button:focus-within {
+    background-color: #ffc107;
+    border: 6px solid #ffc107;
+}
+
+.toolbar-annotations .input-group:focus-within button,
+.toolbar-annotations button.polygon-button:focus-within {
+    color: #212529;
+    border-color: #212529;
+}
